force-app/main/default/objects/FieloPLT__ChallengeReward__c/FieloPLT__ChallengeReward__c.object-meta.xml
<CustomObject>
    <description>Challenge Rewards are the Rewards linked to a particular Challenge. They represent the available Rewards Challenge Members can obtain in exchange of accomplishing their assigned Missions.</description>
    <label>Challenge Reward</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Challenge Rewards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>