force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FieloPLT__Badge__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Badge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A Badge to be granted as part of the Challenge.</description>
    <inlineHelpText>Optionally, enter a Badge to be awarded as part of the Challenge. You can create Badges in the Members tab.</inlineHelpText>
    <label>Badge</label>
    <referenceTo>FieloPLT__Badge__c</referenceTo>
    <relationshipLabel>Challenge Rewards</relationshipLabel>
    <relationshipName>ChallengeRewards</relationshipName>
    <type>Lookup</type>
</CustomField>