force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FieloPLT__BadgeExpiration__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__BadgeExpiration__c</fullName>
    <description>The number of days or months during which a Badge granted is held by a Member.</description>
    <inlineHelpText>Enter the number of days or months a Member will hold the Badge.</inlineHelpText>
    <label>Badge Expiration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>