force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FieloPLT__BadgeExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__BadgeExpirationDate__c</fullName>
    <label>Badge Expiration Date</label>
    <type>Date</type>
</CustomField>