force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FieloPLT__Challenge__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Challenge__c</fullName>
    <description>Challenge which the Reward belongs to.</description>
    <inlineHelpText>Challenge which the Reward belongs to.</inlineHelpText>
    <label>Challenge</label>
    <referenceTo>FieloPLT__Challenge__c</referenceTo>
    <relationshipLabel>Rewards</relationshipLabel>
    <relationshipName>ChallengeRewards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>