force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FieloPLT__ConversionValue__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ConversionValue__c</fullName>
    <description>Points or other value by which the &quot;Record Field Name&quot; is divided (Factor) or multiplied (Multiplier).</description>
    <inlineHelpText>Points or other value by which the &quot;Record Field Name&quot; is divided (Factor) or multiplied (Multiplier).</inlineHelpText>
    <label>Point Conversion Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>