force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FieloPLT__Description__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Description__c</fullName>
    <description>It shows the details of the Challenge Reward.</description>
    <inlineHelpText>Enter the details for the Challenge Reward.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>