force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FieloPLT__From__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__From__c</fullName>
    <description>Range starting point of Challenge Rewards for Challenges whose &quot;Position Table Types&quot; are &quot;Value Range&quot; and &quot;Position Range&quot;.</description>
    <inlineHelpText>Enter the range starting point number of the Challenge Reward (Only for &quot;Value Range&quot; and &quot;Position Range&quot;).</inlineHelpText>
    <label>From</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>