force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FieloPLT__Limit__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Limit__c</fullName>
    <description>Maximum number of times a Challenge Reward can be granted to a Member during a Challenge. Limit is only established in Singular Table type.</description>
    <inlineHelpText>If using the Singular Table Type, enter the maximum number of times this Challenge Reward can be granted to a Member during the Challenge.</inlineHelpText>
    <label>Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>