force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FieloPLT__LogicalExpression__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__LogicalExpression__c</fullName>
    <description>Logical expressions which can be applied to Challenge Rewards. The expressions available are: &quot;All&quot; (it meets all the established Missions); &quot;Any&quot; (it meets at least one established Mission) and &quot;Custom&quot; (it enables creating a formula based on the established Mission. E.g. ((1 AND 2) OR 3).).</description>
    <inlineHelpText>Logical expressions which can be applied to Challenge Rewards: &quot;All&quot; (it meets all the established Missions); &quot;Any&quot; (it meets at least one Mission) and &quot;Custom&quot; (it enables creating a formula based on the established Mission. E.g. ((1 AND 2) OR 3).).</inlineHelpText>
    <label>Match Missions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>