force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FieloPLT__Mission__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Mission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mission</label>
    <referenceTo>FieloPLT__Mission__c</referenceTo>
    <relationshipLabel>Challenge Rewards</relationshipLabel>
    <relationshipName>ChallengeRewards</relationshipName>
    <type>Lookup</type>
</CustomField>