force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FieloPLT__MonthsUntilExpiration__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__MonthsUntilExpiration__c</fullName>
    <description>If completed, it shows the number of months during which Points are valid.</description>
    <inlineHelpText>Enter the number of months during which Points are valid.</inlineHelpText>
    <label>Point Expiration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>