force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FieloPLT__PointConversionMode__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__PointConversionMode__c</fullName>
    <description>How Points are calculated. The options include: &quot;Fixed Value&quot; (Fixed assigned number of Points), &quot;Factor&quot; (numerical field related to the Target Object that can be divided by a specific number), &quot;Multiplier&quot; (numerical field related to the Target Object that can be multiplied by a specific number) and &quot;None&quot; (if using a different Point Type or another type of reward, such as Instant Reward or Instant Badge).</description>
    <inlineHelpText>Choose how Points are calculated: Fixed Value for fixed number of Points; Factor for numerical field that can be divided by a specific number; Multiplier for numerical field that can be multiplied by a specific number; or None if using another reward type</inlineHelpText>
    <label>Point Conversion Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Value</fullName>
            </value>
            <value>
                <fullName>Factor</fullName>
            </value>
            <value>
                <fullName>Multiplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>