force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FieloPLT__PointExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__PointExpirationDate__c</fullName>
    <label>Point Expiration Date</label>
    <type>Date</type>
</CustomField>