force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FieloPLT__PointReflection__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__PointReflection__c</fullName>
    <label>Point Reflection</label>
    <length>50</length>
    <type>Text</type>
</CustomField>