force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FieloPLT__Position__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Position__c</fullName>
    <description>Position number which defines which Challenge Reward can be granted. Only for Challenges which include Missions &quot;Mission Table&quot; or &quot;Time Table&quot;.</description>
    <inlineHelpText>Position number which defines which Challenge Reward are granted. Only for Challenges which include Missions &quot;Mission Table&quot; or &quot;Time Table&quot;.</inlineHelpText>
    <label>Position</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>