force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FieloPLT__RecordFieldName__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RecordFieldName__c</fullName>
    <description>Numeric field which can be either divided (Factor) or multiplied (Multiplier).</description>
    <inlineHelpText>Choose the numeric field which can be divided (Factor) or multiplied (Multiplier).</inlineHelpText>
    <label>Point Field name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>