force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FieloPLT__Reward__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Reward__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>An Instant Reward to be granted as part of the Challenge.</description>
    <inlineHelpText>Optionally, enter an Instant Reward to be granted as part of the Challenge. You can create Instant Rewards in the Rewards tab.</inlineHelpText>
    <label>Instant Reward</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Reward does not exist or it is not an instant reward</errorMessage>
        <filterItems>
            <field>FieloPLT__Reward__c.FieloPLT__IsInstantReward__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FieloPLT__Reward__c</referenceTo>
    <relationshipLabel>Challenge Rewards</relationshipLabel>
    <relationshipName>ChallengeRewards</relationshipName>
    <type>Lookup</type>
</CustomField>