force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FieloPLT__RewardDeliveryClass__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RewardDeliveryClass__c</fullName>
    <label>Reward Delivery Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>