force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FieloPLT__To__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__To__c</fullName>
    <description>Range toward point of Challenge Rewards for Challenges whose &quot;Position Table Types&quot; are &quot;Value Range&quot; and &quot;Position Range&quot;.</description>
    <inlineHelpText>Enter the range toward point number of the Challenge Reward (Only for &quot;Value Range&quot; and &quot;Position Range&quot;).</inlineHelpText>
    <label>To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>