force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FieloPLT__WithCustomReward__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__WithCustomReward__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, a Custom Reward can be chosen.</description>
    <inlineHelpText>If ticked, a Custom Reward can be chosen.</inlineHelpText>
    <label>Custom Reward</label>
    <type>Checkbox</type>
</CustomField>