force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/V_BetcoinsCompConversionMode__c.field-meta.xml
<CustomField>
    <fullName>V_BetcoinsCompConversionMode__c</fullName>
    <description>Campo criado para atender o pré-requisito de tipos de ponto.</description>
    <inlineHelpText>Campo criado para atender o pré-requisito de tipos de ponto.</inlineHelpText>
    <label>Modo de Conversão - Betcoins Comp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Value</fullName>
            </value>
            <value>
                <fullName>Factor</fullName>
            </value>
            <value>
                <fullName>Multiplier</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>