force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/V_BetcoinsCompExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>V_BetcoinsCompExpirationDate__c</fullName>
    <description>Campo criado para atender o pré-requisito de tipos de ponto.</description>
    <inlineHelpText>Campo criado para atender o pré-requisito de tipos de ponto.</inlineHelpText>
    <label>Data de Expiração Ponto - Betcoins Comp</label>
    <type>Date</type>
</CustomField>