force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/V_BetcoinsCompMonthsUntilExpiration__c.field-meta.xml
<CustomField>
    <fullName>V_BetcoinsCompMonthsUntilExpiration__c</fullName>
    <description>Campo criado para atender o pré-requisito de tipos de ponto.</description>
    <inlineHelpText>Campo criado para atender o pré-requisito de tipos de ponto.</inlineHelpText>
    <label>Months Until Expiration - Betcoins Comp</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>