force-app/main/default/objects/FieloPLT__ChallengeReward__c/validationRules/FieloPLT__Reward_Program_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__Reward_Program_Validation</fullName>
    <active>true</active>
    <description>Challenge Reward and Challenge must belong to the same Program.</description>
    <errorConditionFormula>AND(
    NOT( ISBLANK(FieloPLT__Reward__c) ) ,
    NOT( ISBLANK(FieloPLT__Reward__r.FieloPLT__Program__c) ) ,
    FieloPLT__Reward__r.FieloPLT__Program__c !=  FieloPLT__Challenge__r.FieloPLT__Program__c)</errorConditionFormula>
    <errorMessage>Challenge Reward and Challenge must belong to the same Program.</errorMessage>
</ValidationRule>